--- a/estilos/cajas.css
+++ b/estilos/cajas.css
@@ -1,14 +1,40 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-color: slateblue;
     font-size: 12px;
+   
+}
+#nuevo{
+    width: 90%;
+    height: 50px;
+    border: 2px dashed white;
+    padding: 10px;
+    background-color: crimson;
+}
+#nuevo >div{
+    background-color: white;
+    width: 50%;
+}
+#span{
+    width: 90%;
+    height: 50px;
+    /*es un texto no una caja*/
+    background-color: blue;
+    font-size: 10em;
+    display: block;
 }
 #caja1{
     background-color: snow;
     font-size: 2em;
     height: 300px;
+    padding: 10px;
 }
 div#caja1 > div.cajas > p{
-    font-size: 2em;
+    font-size: 1em;
     color: yellow;
 }
 #caja2{
@@ -16,11 +42,12 @@ div#caja1 > div.cajas > p{
 }
 .cajas{
     background-color: violet;
-    width: 20%;
+    width: 18%;
     height: 200px;
     /*border: 2px solid #fff;*/
     float: left;
     margin-left: 4%;
     margin-top: 20px;
+    padding: 10px;
 
 }
