--- a/prepractica/estilos.css
+++ b/prepractica/estilos.css
@@ -9,9 +9,16 @@ body{
     width: 100%;
     height: 70px;
     background-color: coral;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 5;
 }
 #central{
     height: 700px;
+    margin-top: 70px;
+    float: left;
+    width: 100%;
 }
 #nav, #aside{
     width: 20%;
@@ -43,4 +50,32 @@ body{
 #footer2{
     height: 70px;
     background-color: black;
+}
+#whats{
+    width: 60px;
+    height: 60px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    position: fixed;
+    background-color: green;
+    bottom: 10px;
+    right: 10px;
+    text-align: center;
+    font-size: 30px;
+    line-height: 2;/*Interlineado*/
+    color: white;
+    z-index: 5;
+}
+#anu{
+    width: 30%;
+    height: 300px;
+    border-radius: 20px;
+    background-color: greenyellow;
+    position: absolute;
+    top: 250px;
+    left: 35%;
+    box-shadow: -26px 22px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -26px 22px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -26px 22px 5px 0px rgba(0,0,0,0.75);
+
 }
