--- a/coffee/css/estilos.css
+++ b/coffee/css/estilos.css
@@ -6,6 +6,7 @@
 body{
     background-color: whitesmoke;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'Open Sans', sans-serif;
@@ -24,6 +25,7 @@ header{
     height: 70px;
     border-bottom: 1px solid #c1c1c1;
     width: 100%;
+    background-color: whitesmoke;
 }
 header > #logo{
 
@@ -87,9 +89,9 @@ section#main .bola{
     width: 500px;
     height: 500px;
     border-radius: 50%;
-    background-color: #eee459;
+    background-color: chocolate;
     float: right;
-    margin-right: -100px;
+    margin-right: -200px;
 }
 section#main .bola img{
     width: 200px;
@@ -98,13 +100,83 @@ section#main .bola img{
     margin-left: 100px;
     transform: rotate(-25deg);
 }
+#numeros{
+    border-left: 10px solid chocolate;
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+}
 
-h4{
-    font-size: 2rem;
+
+#numeros > div > .col > h5{
+    border-bottom: 1px solod #1d1d1d;
+    
+    font-size: 1.5rem;
+    font-weight: lighter;
+
 }
-h5{
-    font-size: 2rem;
+#news, #contact{
+    
+    
+    width: 90%;
+    margin-left: 90px;
+    min-height: 800px;
+    display: block;
+    margin-top: 50px;
 }
-h6{
-    font-size: 2rem;
+#news .columna3{
+    float: left;
+    width: 25%;
+    height: 200px;
+    margin-left: 8%;
+}
+
+
+#news .columna3 a{
+    text-decoration: none;
+    color: #1d1d1d;
+    
+}
+#news .columna3 a img{
+    
+    width: 100%;
+    height: 90%;
+}
+#contact h2{
+    margin-top: 200px ;
+}
+#contact fieldset{
+    border: none;
+    padding: 5px;
+}
+#contact fieldset label{
+    display: block;
+    width: 100%;
+}
+#contact fieldset imput,#contact fieldset textarea{
+    display: block;
+    width: 90%;
+    border: 1px solid #eeeeee;
+    padding: 5px;
+    outline-color: #eeeeee;
+    height: 30px;
+}
+#contact fieldset button{
+    width: 150px;
+    height: 30px;
+    padding: 5px;
+    background-color: chocolate;
+    color: white;
+    border:none;
+
+}
+footer{
+    text-align: center;
+    padding: 5px;
+    margin-top: 50px;
+    display:block ;
+    width: 100%;
+    height: 70px;
+    background-color: chocolate;
+    color: whitesmoke;
 }
